# ChatBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  logging.py  main.py
app/api/: dependencies.py  health.py  ops.py  telegram.py
app/api/routes/: admin.py  health.py  webhook.py
app/bot/: commands.py  dispatcher.py  setup.py
app/bot/filters/: __init__.py  admin.py  chat_state.py
app/bot/handlers/: admin.py  chat.py  common.py  errors.py  matchmaking.py  menu.py  moderation.py  payments.py  profile.py  ratings.py  referral.py  registration.py  start.py  (+1 more)
app/db/: base.py  session.py
app/schemas/: api.py  common.py  domain.py  moderation.py  session.py  user.py
app/services/: admin_service.py  container.py  exceptions.py  export_service.py  match_service.py  moderation_service.py  ops_service.py  payment_service.py  queue_service.py  rating_service.py  relay_service.py  session_service.py  user_service.py
app/utils/: constants.py  enums.py  exceptions.py  redis.py  redis_keys.py  referral.py  telegram.py  text.py  time.py
docker/: entrypoint.sh  nginx.conf
migrations/: README  env.py
migrations/versions/: 0001_initial_schema.py  0002_referrals_vip.py  0003_point_purchases.py  0004_scaling_hardening_indexes.py  0005_ratings.py  0005_session_ratings_and_user_rating_score.py  0006_rating_score_default_5.py  0007_match_region.py  20260329_0001_initial.py
nginx/: nginx.conf
telegram_anonymous_chat_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_commands.py  test_error_handler_middleware.py  test_matchmaking.py  test_payments.py  test_premium_gender_ui.py  test_profile_ui.py  test_ratings.py  test_referral_vip.py  test_registration.py  test_registration_flow_ui.py  test_relay_service.py  test_runtime_scaling.py  test_search_flow_ui.py  test_sessions.py
tests/fixtures/: fakes.py
(+36 files in other folders)
