[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "telegram-anonymous-stranger-bot"
version = "0.1.0"
description = "Production-ready Telegram anonymous stranger chat bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.6.0,<4.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.29,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "alembic>=1.13.1,<2.0.0",
  "redis[hiredis]>=5.0.4,<6.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "structlog>=24.1.0,<25.0.0",
  "python-multipart>=0.0.9,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1,<9.0.0",
  "pytest-asyncio>=0.23.6,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "httpx>=0.27.0,<1.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
